[package]
name = "geoip-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8.0"
reqwest = "0.11.22"
tokio = { version = "1.34.0", features = ["full"] }
strum = "0.25"
strum_macros = "0.25"